# COS3711-Assignment-2

./: CMakeLists.txt  README.md  mainwindow (2).cpp  mainwindow.h  receiverwindow (2).h  receiverwindow.cpp  udpbroadcaster (2).cpp  udpbroadcaster.h  udpreceiver (2).h  udpreceiver.cpp
